k8s/apps/namespaces/prod/prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    environment: development
    managed-by: terraform
